--- a/Learning/file.html
+++ b/Learning/file.html
@@ -11,7 +11,13 @@
     <h1>Hi</h1>
      
  
-    <py-script> print('Now you can!') </py-script>
+    <script type="py"> 
+        from pyscript import display
+        import random
+        display("Now you can!",random.choice([1,2,3,45,])) 
+        display("hello world")
+        <h1>display('Nagi')</h1>
+    </script>
 
     <h1>Name</h1>
 
